# sshpushpull

./: README.md  pyproject.toml  requirements.txt  sshpushpull.py
